tenancy/tenant1_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tenant1-network-policy
  namespace: tenant1
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      to: []
  ingress:
    - ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
      from: []
